# theadmouse

firmware/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
firmware/boards/puckjs/: Kconfig.defconfig  Kconfig.puckjs  board.yml  puckjs-pinctrl.dtsi  puckjs.dts  puckjs_defconfig
firmware/boards/theadmouse/: Kconfig.defconfig  Kconfig.theadmouse  board.yml  pm_static.yml  pre_dt_board.cmake  theadmouse-pinctrl.dtsi  theadmouse.dts  theadmouse_defconfig  theadmouse_partition.dtsi
firmware/drivers/charger/: Kconfig  charger_bq2518x.c
firmware/drivers/sensor/st/lis2mdl/: Kconfig  lis2mdl.c
firmware/drivers/sensor/st/lsm6dsl/: Kconfig  lsm6dsl.c  lsm6dsl.h  lsm6dsl_trigger.c
firmware/dts/bindings/: mpi,pwm-rgbled.yaml  mpi,pwm-spk.yaml  pwm-spk.yaml
firmware/dts/bindings/charger/: ti,bq2518x-common.yaml
firmware/src/: app_power_manager.c  app_power_manager.h  at_cmd.c  at_cmd.h  at_cmd_param.c  at_cmd_param.h  ble.c  ble.h  ble_hid_service.c  ble_hid_service.h  button_manager.c  button_manager.h  cmd_uart.c  cmd_uart.h  common.h  headmouse_input.c  headmouse_input.h  hm_hid_evt.h  hog.c  hog.h  input_protocol.h  main.c  motion_engine.c  motion_engine.h  slot_manager.c  slot_manager.h  telemetry_uart.c  telemetry_uart.h
firmware/src/MadgwickAHRS/: MadgwickAHRS.c  MadgwickAHRS.h
firmware/src/keymaps/: KeyboardLayout.h  KeyboardLayout_da_DK.c  KeyboardLayout_de_DE.c  KeyboardLayout_en_US.c  KeyboardLayout_es_ES.c  KeyboardLayout_fr_FR.c  KeyboardLayout_hu_HU.c  KeyboardLayout_it_IT.c  KeyboardLayout_pt_BR.c  KeyboardLayout_pt_PT.c  KeyboardLayout_sv_SE.c
firmware/sysbuild/: CMakeLists.txt
hardware/: .gitignore
hardware/3dmodels/: Buzzer_FUET_FST-9018_9x9mm.wrl  LED_RGB_TUOZHAN_P4-1204RGBWS2-1.5T-A_Horizontal.wrl  RJ25_TE_215876-1_Horizontal.step
hardware/RevA/: Pin Assignment.ods  Stackup.ods
hardware/RevA/pcb/: 3dmodels  fabrication-toolkit-options.json  fp-lib-table  sensors.kicad_sch  sym-lib-table  theadmouse.kicad_pcb  theadmouse.kicad_pro  theadmouse.kicad_sch  theadmouse.kicad_sym  user-interface.kicad_sch
hardware/RevA/pcb/production/: bom.csv  (+3 more)
hardware/mechanical/components/: Buzzer_FUET_FST-9018_9x9mm.FCStd  LED_Green_MEIHUA_MHS110UGCT_Horizontal.FCStd  (+1 more)
scripts/: debug.sh  flash.sh  plugcat.sh
scripts/ble_serial_ahsr_display/: ble_serial_ahsr_display.py  requirements.txt
(+9 files in other folders)
